fix: change slider buttons behaviour on mobile devices

--- a/christmas-shop/css/main/styles.scss
+++ b/christmas-shop/css/main/styles.scss
@@ -317,7 +317,7 @@ main {
     cursor: pointer;
 
     @media (hover: hover) {
-      &:hover:not(.inactive) {
+      &:hover {
         background-color: $white;
         stroke: $primary;
       }
